Refactor UYVYFrameExtractor and add comprehensive tests
Refactored UYVYFrameExtractor into a policy-based, header-only implementation supporting Rec. 709/601 and full/limited range extraction. Updated IFrameExtractor interface for clarity. Added extensive unit tests for all extractor variants and supporting test fixtures, and integrated the new tests into CMake.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,3 +10,7 @@ target_link_libraries(
 )
 target_compile_definitions(UpdateChecker_test PRIVATE NOMINMAX)
 gtest_discover_tests(UpdateChecker_test DISCOVERY_MODE PRE_TEST)
+
+add_executable(UyvyFrameExtractor_test VideoFrameExtractor/UyvyFrameExtractor_test.cpp)
+target_link_libraries(UyvyFrameExtractor_test PRIVATE GTest::gtest_main ${CMAKE_PROJECT_NAME}_header)
+gtest_discover_tests(UyvyFrameExtractor_test DISCOVERY_MODE PRE_TEST)
