--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -138,6 +138,7 @@ jobs:
           sudo apt-get install -y --no-install-recommends \
             build-essential \
             libgles2-mesa-dev \
+            libsimde-dev \
             obs-studio \
             qt6-base-dev \
             libqt6svg6-dev \
