--- a/unsupported/aur/obs-backgroundremoval-lite-git/PKGBUILD
+++ b/unsupported/aur/obs-backgroundremoval-lite-git/PKGBUILD
@@ -24,6 +24,7 @@ build() {
   cmake -B build -S . \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_INSTALL_LIBDIR=lib \
     -GNinja
   cmake --build build
 }
