--- a/unsupported/aur/obs-backgroundremoval-lite-git/PKGBUILD
+++ b/unsupported/aur/obs-backgroundremoval-lite-git/PKGBUILD
@@ -9,7 +9,7 @@ url="https://github.com/kaito-tokyo/${_pkgname}"
 license=('GPL2')
 depends=('obs-studio' 'fmt' 'ncnn')
 makedepends=('git' 'cmake' 'ninja')
-source=("${_pkgname}::git+https://github.com/kaito-tokyo/${_pkgname}.git#branch=add-pkgbuild")
+source=("${_pkgname}::git+https://github.com/kaito-tokyo/${_pkgname}.git")
 sha256sums=('SKIP')
 
 
