--- a/unsupported/arch/obs-backgroundremoval-lite-git/PKGBUILD
+++ b/unsupported/arch/obs-backgroundremoval-lite-git/PKGBUILD
@@ -26,6 +26,8 @@ build() {
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_INSTALL_LIBDIR=lib \
+    -DENABLE_FRONTEND_API=ON \
+    -DENABLE_QT=ON \
     -GNinja
   cmake --build build
 }
