--- a/unsupported/arch/obs-backgroundremoval-lite/PKGBUILD
+++ b/unsupported/arch/obs-backgroundremoval-lite/PKGBUILD
@@ -9,7 +9,7 @@ license=('GPL2')
 depends=('obs-studio' 'fmt' 'ncnn')
 makedepends=('git' 'cmake' 'ninja')
 conflicts=("${pkgname}-git")
-source=("${pkgname}-${pkgver}::git+https://github.com/kaito-tokyo/${pkgname}.git")
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/kaito-tokyo/$pkgname/archive/refs/tags/v$pkgver.tar.gz")
 sha256sums=('aaa')
 
 build() {
