--- a/unsupported/arch/obs-backgroundremoval-lite/PKGBUILD
+++ b/unsupported/arch/obs-backgroundremoval-lite/PKGBUILD
@@ -25,6 +25,6 @@ build() {
 }
 
 package() {
-  cd "${_pkgname}-${pkgver}"
+  cd "${pkgname}-${pkgver}"
   DESTDIR="$pkgdir" cmake --install build
 }
