--- a/unsupported/arch/obs-backgroundremoval-lite-git/PKGBUILD
+++ b/unsupported/arch/obs-backgroundremoval-lite-git/PKGBUILD
@@ -9,8 +9,8 @@ url="https://github.com/kaito-tokyo/${_pkgname}"
 license=('GPL-2.0-only')
 depends=('obs-studio' 'fmt' 'ncnn')
 makedepends=('git' 'cmake' 'ninja')
-provides=("${_pkgname}")
-conflicts=("${_pkgname}")
+provides=("${_pkgname}" "${_pkgname}-dbg")
+conflicts=("${_pkgname}" "${_pkgname}-dbg")
 source=("${_pkgname}::git+https://github.com/kaito-tokyo/${_pkgname}.git")
 sha256sums=('SKIP')
 
