--- a/unsupported/arch/obs-backgroundremoval-lite/PKGBUILD
+++ b/unsupported/arch/obs-backgroundremoval-lite/PKGBUILD
@@ -5,10 +5,10 @@ pkgrel=1
 pkgdesc='Background Removal Lite for OBS Studio'
 arch=('x86_64')
 url="https://github.com/kaito-tokyo/${pkgname}"
-license=('GPL2')
+license=('GPL-2.0-only')
 depends=('obs-studio' 'fmt' 'ncnn')
 makedepends=('git' 'cmake' 'ninja')
-conflicts=("${pkgname}-git")
+conflicts=("${pkgname}-git" "${pkgname}-git-dbg")
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/kaito-tokyo/$pkgname/archive/refs/tags/$pkgver.tar.gz")
 sha256sums=('8ccb3706630fedb9ee7e65cf668751fc776a001ffdf95288b86bd4eaa4c52591')
 
